[package]
name = "hugr-taso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quantinuum-hugr = { path = "../hugr", features = ["patternmatching"] }
portmatching = { path = "../portmatching", features = ["serde"] }
priority-queue = "1.3.0"
portgraph = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
