[package]
name = "hugr-taso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "1.3.0"
portgraph = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.3", features = ["stream"] }
futures-util = "0.3.14"
indicatif = "0.15.0"
num_cpus = "1.15.0"
tokio = { version = "1.28.2", features = ["full"] }

[dependencies.quantinuum-hugr]
git = "https://github.com/CQCL-DEV/hugr"
branch = "patterns"
features = ["patternmatching"]

[dependencies.portmatching]
git = "https://github.com/lmondada/portmatching"
features = ["serde"]
branch = "consume-pattern-opti"
